Update-perbaiki-source-image.html

--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
 
         <div class="mySlides fade">
             <div class="numbertext">1 / 3</div>
-            <img src="../SE Galih Pradana/Assets/sayur segar air.jpg" style="width:70%">
+            <img src="Assets/sayur segar air.jpg" style="width:70%">
             <div class="text">sayuran segar</div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">2 / 3</div>
-            <img src="../SE Galih Pradana/Assets/buah segar ir 1.jpg" style="width:70%">
+            <img src="Assets/buah segar ir 1.jpg" style="width:70%">
             <div class="text">buah segar</div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">3 / 3</div>
-            <img src="../SE Galih Pradana/Assets/rempah rempah 1.jpg" style="width:70%">
+            <img src="Assets/rempah rempah 1.jpg" style="width:70%">
             <div class="text">Rempah-Rempah</div>
         </div>
 
@@ -71,7 +71,7 @@
 
     <br><br><br>
     <div class="gambarakun">
-        <img src="..//SE Galih Pradana/Assets/logo akun.png" alt="logo akun" title="akun" width="80">
+        <img src="Assets/logo akun.png" alt="logo akun" title="akun" width="80">
     </div>
     <div class="namadepan"><b>Flourence Hughes</b></div>
     <div class="profesi"><i>Ibu Rumah Tangga, 28</i></div>
@@ -128,26 +128,26 @@
         <br><br>
     </div>
     <div class="no1">
-        <img src="../SE Galih Pradana/Assets/1.png" alt="" width="10%">
+        <img src="Assets/1.png" alt="" width="10%">
     </div>
     <div class=" isipoin1">
         <p>Sayuran dan buah buahan segar berkualitas untuk kepuasan pelanggan kami</p>
     </div>
     <div class="no2">
-        <img src="../SE Galih Pradana/Assets/2.png" alt="" width="10%">
+        <img src="Assets/2.png" alt="" width="10%">
     </div>
     <div class=" isipoin2">
         <p>sayuran dan buah buahan segar kami dipetik langsung oleh petani lokal dari kebun kami</p>
     </div>
     <div class="no3">
-        <img src="../SE Galih Pradana/Assets/3.png" alt="" width="10%">
+        <img src="Assets/3.png" alt="" width="10%">
     </div>
     <div class="isipoin3">
         <p>tidak hanya sayur dan buah saja, kami juga menyediakan <br>
             lengkap rempah-rempah Indonesia sekaligus alat masak </p>
     </div>
     <div class="no4">
-        <img src="../SE Galih Pradana/Assets/4.png" alt="" width="10%">
+        <img src="Assets/4.png" alt="" width="10%">
     </div>
     <div class="isipoin4">
         <p>kami menawarkan layanan pengiriman yang cepat dan aman ke seluruh wilayah Indonesia</p>
@@ -158,7 +158,7 @@
     </div>
     <br><br><br>
     <div class="logosayursegar">
-        <img src="../SE Galih Pradana/Assets/sayur segar air bulat.png" alt="sayur segar" title="'sayur berkualitas"
+        <img src="Assets/sayur segar air bulat.png" alt="sayur segar" title="'sayur berkualitas"
             width="100">
     </div>
     <div class="judulkalimat1">
@@ -169,7 +169,7 @@
             sumber pertanian terbaik</p>
     </div>
     <div class="logobuahsegar">
-        <img src="../SE Galih Pradana/Assets/buah segar air.png" alt="buah segar" title="buah berkualitas" width="130">
+        <img src="Assets/buah segar air.png" alt="buah segar" title="buah berkualitas" width="130">
     </div>
     <div class="judulkalimat2">
         <h4>Fresh Fruite</h4>
@@ -179,7 +179,7 @@
             dan harga yang menarik</p>
     </div>
     <div class="pengiriman">
-        <img src="../SE Galih Pradana/Assets/delivery.png" alt="pengiriman" title="pwngiriman" width="220">
+        <img src="Assets/delivery.png" alt="pengiriman" title="pwngiriman" width="220">
     </div>
     <div class="judulkalimat3">
         <h4>Instant Delivery</h4>
@@ -189,7 +189,7 @@
             dengan <br>SOP untuk menjaga kondisi <br> belanja kamu</p>
     </div>
     <div class="bumbudapur">
-        <img src="..//SE Galih Pradana/Assets/bumbu dapur.png" alt="bumbu dapur" title="bumbu dapur" width="130">
+        <img src="Assets/bumbu dapur.png" alt="bumbu dapur" title="bumbu dapur" width="130">
     </div>
     <div class="judulkalimat4">
         <h4>Kitchen Ingridients</h4>
@@ -199,7 +199,7 @@
             untuk keperluan memasak kamu</p>
     </div>
     <div class="alatmasak">
-        <img src="../SE Galih Pradana/Assets/alat masak.png" alt="peralatan masak" title="peralatan masak" width="130">
+        <img src="Assets/alat masak.png" alt="peralatan masak" title="peralatan masak" width="130">
     </div>
     <div class="judulkalimat5">
         <h4>Kitchen Set</h4>
@@ -209,7 +209,7 @@
             untuk membantu kamu memasak.</p>
     </div>
     <div class="paketsayur">
-        <img src="../SE Galih Pradana/Assets/paket sayur.png" alt="paket sayur" title="paket sayur" width="70">
+        <img src="Assets/paket sayur.png" alt="paket sayur" title="paket sayur" width="70">
     </div>
     <div class="judulkalimat6">
         <h4>Bunding Set</h4>
