--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
     <br><br><br>
     <div class="gambar-persegi1">
-        <img src="persegi.png" alt="">
+        <img src="/persegi.png" alt="">
     </div>
 
     <p>rumus luas persegi yaitu :</p>
@@ -70,7 +70,7 @@
     </div>
     <br><br>
     <div class="gambar-persegi2">
-        <img src="persegi.png" alt="">
+        <img src="/persegi.png" alt="">
     </div>
     <p>rumus kelilng persegi yaitu :</p>
     <div class="rumus-keliling-persegi">
